# start_green_stay_green

./: .commit_message.txt  .gitignore  .pip-audit-known-vulnerabilities  .pre-commit-config.yaml  .readthedocs.yml  .safety-ignore  .safety-policy.yml  .secrets.baseline  3GATE_WORKFLOW_EXECUTION_PLAN.md  AGENTS.md  API_DOCS_QUALITY_REPORT.md  API_DOCUMENTATION.md  BRANCH_PROTECTION.md  CHANGELOG.md  CI_PIPELINE_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_MD_ANALYSIS.md  CLAUDE_MD_BEST_PRACTICES.md  CLAUDE_MD_CHANGELOG.md  CLAUDE_MD_ENHANCEMENT_PLAN.md  CLI_REFERENCE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  COMMIT_PLAN.md  CONTRIBUTING.md  DOCS_REVIEW_SUMMARY.md  GENERATOR_GUIDE.md  GITHUB_INTEGRATION_FILES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_1_3_COMPLETION_CHECKLIST.md  ISSUE_7_COMPLETION_SUMMARY.md  ISSUE_7_IMPLEMENTATION_COMPLETE.md  LICENSE  METRICS_DASHBOARD.md  MUTATION_TESTING_CONFIG.md  (+25 more)
.claude/agents/: agentic-workflows-orchestrator.md  architecture-design.md  ci-failure-analyzer.md  cicd-orchestrator.md  documentation-engineer.md  foundation-orchestrator.md  implementation-engineer.md  implementation-specialist.md  integration-design.md  mojo-syntax-validator.md  papers-orchestrator.md  performance-engineer.md  performance-specialist.md  ralph-chief-architect.md  ralph-implementation-specialist.md  ralph-test-specialist.md  ralph-worker.md  security-design.md  security-review-specialist.md  security-specialist.md  senior-implementation-engineer.md  shared-library-orchestrator.md  test-engineer.md  test-specialist.md  tooling-orchestrator.md
.claude/commands/: ralph-tick.md
.claude/docs/: principles.md  quality-standards.md  testing.md  tools.md  troubleshooting.md  workflow.md
.claude/skills/: backlog-grooming.md  bug-squashing-methodology.md  ci-debugging.md  file-naming-conventions.md  max-quality-no-shortcuts.md  mutation-testing.md
.claudecode/skills/: comprehensive-pr-review.md  stay-green.md
.github/: dependabot.yml  deslop-areas.json
.github/workflows/: _claude-scan.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-to-ralph-issue.yml  deslop.yml  docs.yml  hopper.yml  labels-bootstrap.yml  metrics.yml  ralph-fleet-tests.yml  ralph-recap.yml  scan-bugs.yml  scan-coverage.yml  scan-dead-code.yml  scan-groom.yml  scan-perf.yml  scan-security.yml  scan-todo.yml  scan-types.yml
claude/: principles.md  quality-standards.md  testing.md  tools.md  troubleshooting.md  workflow.md
docs/: AI_ORCHESTRATION.md  CLI_REFERENCE.md  GENERATOR_GUIDE.md  METRICS_DASHBOARD.md  README.md  TUTORIALS.md  __init__.py  dashboard.html  metrics.json
docs/rca/: RCA_ISSUE_171.md  RCA_ISSUE_API_KEY_TESTS.md  RCA_ISSUE_MISSING_GENERATORS.md
examples/: README-METRICS-DASHBOARD.md  __init__.py  dashboard-production.html  dashboard.html  generate_metrics_example.py  metrics-workflow.yml  metrics.json
examples/cpp/: README.md
examples/cpp/wrist-pulse/: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt  tizen-manifest.xml
examples/cpp/wrist-pulse/.github/workflows/: ci.yml
examples/cpp/wrist-pulse/inc/: greeting.h
examples/cpp/wrist-pulse/res/: README.md
examples/cpp/wrist-pulse/shared/res/: README.md
examples/cpp/wrist-pulse/src/: greeting.cpp  main.cpp
examples/cpp/wrist-pulse/tests/: test_greeting.cpp
examples/csharp/: README.md
examples/java/: README.md
examples/kotlin/: README.md
examples/ruby/: README.md
examples/swift/: README.md
plan/: 2026-01-27_BACKLOG_GROOMING.md  2026-03-22_BACKLOG_GROOMING.md  2026-04-10_BACKLOG_GROOMING.md  2026-05-10_BACKLOG_GROOMING.md  IMPLEMENTATION_ROADMAP.md  ISSUE_7_FRESH_START_PROMPT.md  RCA_PR37_AI_ORCHESTRATOR_FAILURE.md  SPEC.md
plan/bugs/: RCA_ISSUE_165.md  RCA_ISSUE_170.md  RCA_ISSUE_186_CI_MARKERS.md  RCA_ISSUE_SPINNER_BUG.md
plans/: 2026-05-03-claude-init-optimization-roadmap.md  2026-06-02_RALPH_LOOP_ROOT_CAUSE_AND_FIX.md  FINAL_QUALITY_VERIFICATION.md  PR135_COMPLETE_QUALITY_REVIEW.md  PR135_FEEDBACK_RESOLUTION.md  PR135_QUALITY_FIXES.md
plans/architecture/: .importlinter  ADR-001-batch-enhance.md  README.md
plans/github-issues/: COMMIT_parity.md  EPIC_00_umbrella.md  EPIC_cpp.md  EPIC_csharp.md  EPIC_java.md  EPIC_kotlin.md  EPIC_ruby.md  EPIC_swift.md  ISSUE_go_architecture.md  ISSUE_rust_architecture.md  SUB_cpp_ci.md  SUB_cpp_docs.md  SUB_cpp_foundation.md  SUB_cpp_quality.md  SUB_cpp_tests.md  SUB_csharp_docs.md  SUB_csharp_quality.md  SUB_csharp_tests.md  SUB_java_docs.md  SUB_java_foundation.md  SUB_java_quality.md  SUB_java_tests.md  SUB_kotlin_ci.md  SUB_kotlin_docs.md  SUB_kotlin_foundation.md  SUB_kotlin_quality.md  SUB_kotlin_tests.md  SUB_ruby_docs.md  SUB_ruby_quality.md  SUB_ruby_tests.md  SUB_swift_ci.md  SUB_swift_docs.md  SUB_swift_foundation.md  SUB_swift_quality.md  SUB_swift_tests.md  _generate_smartwatch_issues.py  _manifest.tsv
prompts/scans/: bugs.md  complexity.md  dead-code.md  deps.md  docs.md  mutation.md  perf.md  security.md  todo.md  types.md
quality-gates/: README.md  architecture-rules.json  complexity-limits.json  coverage-thresholds.json
rca/: RCA_ISSUE_167.md
reference/: MAXIMUM_QUALITY_ENGINEERING.md
reference/ci/: csharp.yml  go.yml  java.yml  kotlin.yml  php.yml  python.yml  ruby.yml  rust.yml  swift.yml  typescript.yml
reference/claude/: CLAUDE.md  (+1 more)
scripts/: README.md  README_AUDIT_TOOL.md  analyze_mutations.py  audit-deps.sh  audit_tool_configs.py  check-all.sh  collect_metrics.py  common.sh  complexity.sh  configure-branch-protection.sh  coverage.sh  docs.sh  fix-all.sh  format.sh  lint.sh  metrics-complexity.sh  metrics-docs.sh  mutation-enhanced.sh  mutation.sh  pr-status.sh  regenerate_dashboard.py  review-pr.sh  security.sh  setup-dev.sh  start-codex-web-mobile.sh  test.sh  typecheck.sh  verify_release_readiness.py  verify_release_readiness.sh
start_green_stay_green/: __init__.py  cli.py
test-project/: .pre-commit-config.yaml
tests/: __init__.py  conftest.py  test_baseline.py
(+304 files in other folders)
