[project]
name = "start-green-stay-green"
version = "0.1.0"
description = "A meta-tool for generating quality-controlled, AI-ready repositories"
authors = [
    {name = "Start Green Stay Green Team", email = "team@startgreenstaygreen.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["scaffolding", "quality", "ci-cd", "ai", "claude", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "prospector>=1.10.0",

    # Security
    "bandit[toml]>=1.7.7",
    "safety>=3.0.0",

    # Code quality analysis
    "vulture>=2.10",
    "radon>=6.0.0",
    "xenon>=0.9.0",
    "interrogate>=1.5.0",
    "pydocstyle>=6.3.0",
    "darglint>=1.8.0",

    # Code improvement tools
    "tryceratops>=2.3.0",
    "refurb>=1.26.0",
    "pyupgrade>=3.15.0",
    "autoflake>=2.2.1",
    "dead>=1.5.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-randomly>=3.15.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "mutmut==2.5.1",  # Pinned: requires Python 3.11-3.13 (pony ORM incompatible with 3.14)

    # Pre-commit and git
    "pre-commit>=3.6.0",
    "commitizen>=3.13.0",

    # Documentation
    "pdoc>=14.0.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",

    # Development utilities
    "ipython>=8.20.0",
    "ipdb>=0.13.0",
    "importlib-metadata>=7.0.0",

    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-toml>=0.10.0",
    "types-requests>=2.31.0",
]

[project.scripts]
green = "start_green_stay_green.cli:app"
sgsg = "start_green_stay_green.cli:app"

[project.urls]
Homepage = "https://github.com/start-green-stay-green/start-green-stay-green"
Documentation = "https://start-green-stay-green.readthedocs.io"
Repository = "https://github.com/start-green-stay-green/start-green-stay-green"
Issues = "https://github.com/start-green-stay-green/start-green-stay-green/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["start_green_stay_green*"]
exclude = ["tests*", "docs*", "reference*", "templates*"]

# Ruff configuration - Enable ALL rules
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["start_green_stay_green", "tests"]

[tool.ruff.lint]
select = [
    "ALL"  # Enable ALL rules - no exceptions
]

ignore = [
    # Specific documented exceptions only
    "COM812",  # Conflicts with formatter
    "ISC001",  # Conflicts with formatter
    "I001",    # Use isort for import sorting (configured separately)
]

[tool.ruff.lint.per-file-ignores]
"scripts/collect_metrics.py" = [
    "T201",      # Allow print in CLI script for user feedback
    "TRY301",    # Raise within try (intentional for CLIs)
]
"tests/**/*.py" = [
    "S101",      # Allow assert in tests
    "PLR2004",   # Allow magic values in tests
    "D",         # Don't require docstrings in tests
    "ANN",       # Don't require type annotations in tests
    "SLF001",    # Allow accessing private members in tests
]
"tests/e2e/**/*.py" = [
    "S603",      # Allow subprocess calls in E2E tests (controlled test inputs)
    "S607",      # Allow partial executable paths in E2E tests (sgsg, python)
]
"start_green_stay_green/cli.py" = [
    "T201",      # Allow print in CLI
]
"scripts/audit_tool_configs.py" = [
    "T201",      # CLI script needs print for user feedback
]
"scripts/analyze_mutations.py" = [
    "S608",      # Allow SQL string formatting (parameterized queries used correctly)
]
"examples/**/*.py" = [
    "T201",      # Allow print in example scripts (user-facing output)
    "BLE001",    # Allow broad exception in example error handling
    "PLC0415",   # Allow import in exception handler (traceback)
]
"validate_implementation.py" = [
    "T201",      # Allow print in validation script (user-facing output)
    "BLE001",    # Allow broad exception in validation error handling
    "PLC0415",   # Allow import in exception handler (traceback)
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-first-party = ["start_green_stay_green"]

[tool.ruff.lint.mccabe]
max-complexity = 10  # Cyclomatic complexity ceiling

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | reference
  | templates
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
force_sort_within_sections = true
known_first_party = ["start_green_stay_green"]
skip_gitignore = true

# MyPy configuration - Strict mode
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = [
    "worktrees/",
    "reference/",
    "templates/",
    "venv/",
    "MagicMock/",
]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "rich.*",
    "typer.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "flaky_in_ci: marks tests that are flaky in CI due to resource cleanup timing (must pass locally)",
]
filterwarnings = [
    "error",  # Turn all warnings into errors
    "ignore::DeprecationWarning:anthropic.*",
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::ResourceWarning:asyncio.*",  # Ignore asyncio internal cleanup warnings
    "ignore::ResourceWarning:pytest.*",  # Ignore pytest internal cleanup warnings
]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["start_green_stay_green"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/templates/*",
    "*/reference/*",
    "*/MagicMock/*",  # Exclude test-generated mock projects (nested)
    "MagicMock/*",    # Exclude test-generated mock projects (root)
    "*/my_project/*", # Exclude test-generated sample projects (nested)
    "my_project/*",   # Exclude test-generated sample projects (root)
    "*_project/*",    # Exclude any test-generated *_project directories
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
]
fail_under = 90
show_missing = true
precision = 2
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "reference", "templates"]
skips = []  # No skips - fix the security issues
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]

# Interrogate docstring coverage
[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "reference", "templates", "tests"]
verbose = 2
color = true

[tool.refurb]
# Ignore FURB184 (chained assignment with walrus operator) in tests
# Reason: Reduces test readability
# Ignore FURB171 (explicit bool comparison) and FURB110 (collection empty check)
# Reason: Explicit assertions in tests are needed for mutation testing
ignore = ["FURB184"]

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add-ignore = []
match = "(?!test_).*\\.py"

# Vulture dead code detection
[tool.vulture]
min_confidence = 80
paths = ["start_green_stay_green"]
exclude = ["tests/", "reference/", "templates/"]
ignore_decorators = ["@app.command", "@router.get", "@router.post"]
ignore_names = []

# Radon complexity
[tool.radon]
cc_min = "B"
mi_min = 20

# Xenon complexity
[tool.xenon]
max_absolute = "B"
max_modules = "A"
max_average = "A"

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "start_green_stay_green/__init__.py:__version__",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
gpg_sign = false

# Pylint configuration
[tool.pylint.main]
py-version = "3.11"
jobs = 0
suggestion-mode = true
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation before block (conflicts with black)
    "C0326",  # Bad whitespace (conflicts with black)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 5
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-attributes = 7
min-public-methods = 2
max-public-methods = 20

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

# Mutmut configuration (mutation testing)
[tool.mutmut]
paths_to_mutate = "start_green_stay_green/"
backup = false
runner = "pytest -x --assert=plain --tb=short -q"
tests_dir = "tests/"

# Pre-commit configuration reference
[tool.pre-commit]
# Configuration in .pre-commit-config.yaml

[tool.tryceratops]
exclude = ["tests/*"]
ignore = ["TRY101"]  # Allow multiple try blocks in CLI scripts
